Fix: remove Lombok, replace with plain Java getters/setters/constructors